# OptiStack

./: .gitignore  DOCKER_GUIDE.md  OptiStack_Postman_Collection.json  README.md  SETUP.md  TESTING_GUIDE.md  comparison.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: experiments.py  health.py
app/core/: config.py  exceptions.py  logging.py
app/db/: base.py  cassandra.py  cockroachdb.py  elasticsearch.py  influxdb.py  mongodb.py  mysql.py  postgres.py  redis.py
app/models/: experiment.py
app/schemas/: experiment.py
app/services/: experiment_service.py
app/utils/: helpers.py  performance_monitor.py
benchmarks/: base.py  cassandra_benchmark.py  cockroachdb_benchmark.py  elasticsearch_benchmark.py  influxdb_benchmark.py  mongodb_benchmark.py  mysql_benchmark.py  postgres_benchmark.py  redis_benchmark.py
conf/: config.yaml
scripts/: init_cassandra.py  setup_db.py
telemetry/: metrics.py  tracing.py
tests/: conftest.py
tests/test_api/: test_experiments.py
tests/test_services/: test_experiment_service.py
